--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,15 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>lucene4ir</name>
     <description>TODO</description>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <lucene.version>7.2.0</lucene.version>
+        <dl4j.version>0.9.1</dl4j.version>
+        <opennlp.version>1.8.4</opennlp.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.apache.lucene</groupId>
@@ -36,6 +45,12 @@
             <version>1.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>${opennlp.version}</version>
+        </dependency>
+
         <!-- Two additional (and quite irrelevant) dependencies for retrieving synonyms -->
         <dependency>
             <groupId>net.sf.extjwnl</groupId>
@@ -61,10 +76,51 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nlp</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui_2.10</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
 
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                        <configuration>
+                            <programs>
+                                <program>
+                                    <mainClass>lucene4ir.ExperimentsApp</mainClass>
+                                    <name>exp</name>
+                                </program>
+                            </programs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
