--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lucene.version>7.2.0</lucene.version>
-        <dl4j.version>0.9.1</dl4j.version>
+        <lucene.version>7.3.1</lucene.version>
+        <dl4j.version>1.0.0-beta</dl4j.version>
         <opennlp.version>1.8.4</opennlp.version>
     </properties>
 
@@ -18,25 +18,25 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>6.2.0</version>
+            <version>${lucene.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
-            <version>6.2.0</version>
+            <version>${lucene.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
-            <version>6.2.0</version>
+            <version>${lucene.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-memory</artifactId>
-            <version>6.2.0</version>
+            <version>${lucene.version}</version>
         </dependency>
 
         <dependency>
