--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,20 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lucene.version>7.3.1</lucene.version>
-        <dl4j.version>1.0.0-beta</dl4j.version>
-        <opennlp.version>1.8.4</opennlp.version>
+        <lucene.version>7.5.0</lucene.version>
+        <dl4j.version>1.0.0-beta2</dl4j.version>
+        <opennlp.version>1.9.0</opennlp.version>
     </properties>
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
